Used the typescript to build the application logic

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="style/form.css">
   <link rel="stylesheet" href="style/tasksList.css">
   <link rel="stylesheet" href="style/buttonSection.css">
-  <script defer src="script.js"></script>
+  <script defer src="dist/script.js"></script>
 </head>
 
 <body>
