Used sass instead css

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <link rel="icon" href="images/checkIcon.png">
   <link href="https://fonts.googleapis.com/css2?family=Galada&family=Lato&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" />
-  <link rel="stylesheet" href="style/css.css">
-  <link rel="stylesheet" href="style/main.css">
-  <link rel="stylesheet" href="style/header.css">
-  <link rel="stylesheet" href="style/form.css">
-  <link rel="stylesheet" href="style/tasksList.css">
-  <link rel="stylesheet" href="style/buttonSection.css">
+  <link rel="stylesheet" href="style/dist/css.css">
+  <link rel="stylesheet" href="style/dist/main.css">
+  <link rel="stylesheet" href="style/dist/header.css">
+  <link rel="stylesheet" href="style/dist/form.css">
+  <link rel="stylesheet" href="style/dist/tasksList.css">
+  <link rel="stylesheet" href="style/dist/buttonSection.css">
   <script defer src="dist/script.js"></script>
 </head>
 
